# bucket-based_farthest-point-sampling_GPU

./: .gitignore  CMakeLists.txt  README.md  ball_query_gpu.cuh  baseline_main.cu  baseline_sampling.cu  baseline_sampling.cuh  device_common.cu  device_common.cuh  group_gpu.cu  host_common.h  kdtree.cu  kdtree.cuh  kdtree_main.cu  mlp.cuh  pointnet2.cu  release.sh
.github/workflows/: cmake.yml
PointNet2/: ball_query_gpu.cu  group_gpu.cuh  mlp.cuh  pointnet2.cu
src/: baseline_main.cu  device_common.cu
